Change sign-in dialogs to be browser modal.

The sign-in modal dialogs (sign-in dialog, sync confirmation dialog,
sign-in error dialog) have a lifecycle that is independent of the current
web contents. This CL changes them to be presented as browser modal dialogs
(and not web-contents modal dialogs).

There is not difference in the presentation of the sign-in dialogs,
but rather in their behavior:
* the browser modal dialogs has the focus and the user cannot interact with
the browser window before the modal dialog is dismissed.
* the browser modal dialogs are not dismissed tab navigation

Screenshots:
https://drive.google.com/open?id=0Bw1MJ8m7U5kbSHdYZ0lsdlJ2bW8
https://drive.google.com/open?id=0Bw1MJ8m7U5kbU2dOTzZGVjR1U1U

BUG=663751

Review-Url: https://codereview.chromium.org/2594353002
Cr-Commit-Position: refs/heads/master@{#440506}

Former-commit-id: 4d89528f55ebdfe107f61592694272af8b362a55